--- a/style.css
+++ b/style.css
@@ -75,8 +75,89 @@ nav ul li a:hover::after{
 #menuIcon {
     display: none;
 }
-/* Add media queries for responsiveness - when the screen is 786px wide or less, stack the links on top of each other */
-@media (max-width: 865px) {
+/* background image styling */
+header{
+    z-index: -1;
+    background: url("images/ollu-campus.JPG");
+    height: 100vh;
+    -webkit-background-size:cover;
+    background-size: cover;
+    background-position: left center;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+/* Header styling */
+.header-text h1{
+    font-size: 50px;
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    text-align: center;
+    color: white;
+    -webkit-text-stroke: 1.5px black;
+}
+/* p styling */
+p {
+    font-size: 20px;
+}
+#tg-text{
+    font-size: 20px;
+    padding-top: 12px;
+}
+.golfer{
+    height: 400px;
+    width: auto;
+    margin-top: -80px;
+    margin-bottom: -80px;
+    margin-left: -100px;
+}
+/* style button */
+.button{
+    padding: 10px 15px;
+    background: #0056B8;
+    border-radius: 10px;
+    border-style: none;
+    overflow: hidden;
+    font-family: "Raleway", sans-serif;
+    font-size: 20px;
+    cursor: pointer;
+    text-align: center;
+}
+/* Style button on hover */
+.button:hover{
+    background: #003d82;
+}
+.button:active{
+    background: #003d82;
+}
+.wrapper{
+    background-color: rgb(255,255,255,0.6);
+    padding: 12px 15px;
+    margin: 40px 10%;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #0056B8;
+    width: 80%;
+}
+.wrapper2{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+#bottom-wrapper{
+    margin: 40px 25%;
+    width: 50%;
+}
+.button__text{
+    color: white;
+    font-size: 16px;
+    letter-spacing: .03cm;
+}
+/* Add media queries for responsiveness - when the screen is between 768-950 px*/
+@media (min-width: 768px) and (max-width: 1050px) {
     /* Add margin left of logo */
     .logo-wrapper {
         margin-left: 2%;
@@ -132,76 +213,126 @@ nav ul li a:hover::after{
     nav.navactive{
         display: inline;
     }
+    /* Header style */
+    .header-text h1{
+        font-size: 40px;
+        padding-top: 30px;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    /* p style */
+    p {
+        font-size: 16px;
+        line-height: 1.5;
+        text-align: justify;
+    }
+    #tg-text{
+        font-size: 18px;
+        text-align: center;
+        padding: 12px 12px;
+    }
+    .golfer{
+        height: 300px;
+        width: auto;
+        margin-top: -60px;
+        margin-bottom: -70px;
+        margin-left: -100px;
+    }
+    .button__text{
+        color: white;
+        font-size: 14px;
+        letter-spacing: .03cm;
+    }
 }
+/* 768 px and less */
+@media (max-width: 768px) {
+    /* Add margin left of logo */
+    .logo-wrapper {
+        margin-left: 2%;
+    }
+    /* Adjust layout so logo, and menu icon are inline */
+    .container{
+        padding: 10px 0%;
+        display: flex;
+        justify-content: space-between;
+    }
+    /* Adjust menu on sidebar */
+    nav {
+       position: relative; 
+       display: block;
+       width: 30%;
+       display: none;
+       top: 110px;
+    }
+    nav ul {
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        background-color: #0056B8;
+        border-left: solid;
+        border-width: 5px;
+        border-color: white;
 
-/* Body styling */
-/* background image styling */
-header{
-    z-index: -1;
-    background: url("images/ollu-campus.JPG");
-    height: 100vh;
-    -webkit-background-size:cover;
-    background-size: cover;
-    background-position: left center;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    /* flex-direction: column; */
-}
-/* Header styling */
-.header-text h1{
-    font-size: 50px;
-    padding: 80px 15px;
-    text-align: center;
-    color: white;
-    -webkit-text-stroke: 1.5px black;
-}
-/* p styling */
-p {
-    font-size: 20px;
-    text-align: center;
-    background-color: rgb(255,255,255,0.6);
-    padding: 10px 10px;
-    margin: 0px 10%;
-    border-radius: 10px;
-    border-style: solid;
-    border-width: 3px;
-    border-color: #0056B8;
-}
-.golfer{
-    height: 300px;
-    width: auto;
-}
-/* style button */
-.button{
-    padding: 10px 15px;
-    background: #0056B8;
-    border-radius: 10px;
-    border-style: none;
-    overflow: hidden;
-    font-family: "Raleway", sans-serif;
-    font-size: 20px;
-    cursor: pointer;
-    text-align: center;
-    margin: 10px 0;
-}
-/* Style button on hover */
-.button:hover{
-    background: #003d82;
-}
-.button:active{
-    background: #003d82;
-}
-.wrapper{
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    margin: 30px 0;
-}
-.button__text{
-    /* display: inline-block; */
-    color: white;
-    font-size: 16px;
-    letter-spacing: .03cm;
+    }
+    nav ul li {
+        display: block;
+        margin-top: 20px;
+        width: 100%;
+        height: 50px;
+        text-align: left;
+        position: relative;
+    }
+    /* Style menu icona and position */
+    #menuIcon{
+        color: white;
+        display: inline;
+        position:absolute;
+        float: right;
+        margin-left: 85%;
+        margin-top: 30px;
+        font-size: 25px;
+        padding: 1%;
+        border-radius: 4px;
+        cursor: pointer;   
+        border: 2px solid white;
+    }
+    /* This style toggles the menu appearance */
+    nav.navactive{
+        display: inline;
+    }
+    /* Header style */
+    .header-text h1{
+        font-size: 28px;
+        padding-top: 30px;
+        padding-left: 30px;
+        padding-right: 30px;
+        -webkit-text-stroke: 1px black;
+    }
+    /* p style */
+    p {
+        font-size: 14px;
+        line-height: 1.5;
+        text-align: justify;
+    }
+    #bottom-wrapper{
+        margin: 40px 10%;
+        width: 80%;
+    }
+    #tg-text{
+        font-size: 16px;
+        text-align: center;
+        padding: 12px 12px;
+    }
+    .golfer{
+        height: 250px;
+        width: auto;
+        margin-top: -60px;
+        margin-bottom: -60px;
+        margin-left: -100px;
+    }
+    .button__text{
+        color: white;
+        font-size: 14px;
+        letter-spacing: .03cm;
+    }
 }
