--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 body{
-    background: rgb(221, 220, 220);
+    background-color: white;
     color: black;
 }
 /* Style the header with a blue background and some padding */
@@ -162,17 +162,15 @@ p {
     justify-content: center;
     text-align: center;
     align-items: center;
-}
-.logo-footer{
-    height: 60px;
-    width: auto;
-}
-.logo-wrapper-footer{
     padding: 5px 0;
     background: #0056B8;
     border-top: solid;
     border-width: 3px;
     border-color: white;
+}
+.logo-footer{
+    height: 60px;
+    width: auto;
 }
 .footer-wrapper a {
     text-decoration: none;
@@ -187,8 +185,214 @@ p {
 }
 
 
+/* ------------------FUNDRAISER----------------------- */
+
+
+/* SECTION 1 */
+
+.container-f{
+    padding: 10px 2%;
+}
+.fund-row1{
+    display: flex;
+}
+#golf-art{
+    width: 60%;
+    height: 60%;
+    margin-left: -10%;
+}
+.info1{
+    margin-left: -5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.info{
+    justify-content: center;
+    text-align: center;
+}
+.info p{
+    letter-spacing: 1.5px;
+}
+#text1{
+    color: #0056B8;
+    font-size: 52px;
+    font-weight: bold;
+}
+#presents{
+    margin-top: -13%;
+    margin-bottom: -18%;
+    width: 60%;
+    height: auto;
+}
+#text3 {
+    color: #5c5c5c;
+    font-size: 52px;
+    padding-bottom: 15px;
+}
+hr.line{
+    border-top: 3px solid #5c5c5c;
+    margin: 0 50px;
+}
+#text4 {
+    color: #5c5c5c;
+    font-size: 52px;
+    padding-top: 10px;
+    line-height: 1.5;
+}
+#text5 {
+    color: #5c5c5c;
+    font-size: 40px;
+    padding-top: 0px;
+    /* text-transform:uppercase; */
+}
+#register{
+    justify-content: center;
+    text-align: center;
+    padding: 15px 20px;
+    margin: 15px 10px !important;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property: box-shadow, transform;
+}
+#register:hover, #register:focus, #register:active{
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+#text6{
+    font-family: "Raleway", sans-serif;
+    text-transform:uppercase;
+    font-size: 20px;
+}
+
+/* SECTION 2 */
+
+.info2{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+.paint{
+    width: 35%;
+    height: auto;
+}
+
+/* SECTION 3 */
+
+.image{
+    width: 100%;
+    height: auto;
+    background-position: center;
+    background-size: cover;
+    background-image: url("images/tg-image.jpg");
+}
+.image-overlay{
+    width: 100%;
+    height: auto;
+    background-color: rgba(21, 69, 124, 0.5);
+}
+.section3{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: 0 5%;
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+#included{
+    padding: 20px 0;
+    justify-content: center;
+    text-align: center;
+}
+h3{
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+}
+#f-section3{
+    margin: 0 5%;
+    display: flex;
+
+}
+#f-section3 div{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 25%;
+    margin: 0 15px;
+}
+#f-section3 h4{
+    color: white;
+    font-size: 28px;
+    font-weight: bold;
+    padding-bottom: 10px;
+    text-align: center;
+}
+#f-section3 p{
+    color: white;
+    font-size: 17px;
+    padding-bottom: 10px;
+    text-align: justify;
+}
+.sub-text3{
+    padding-top: 10px;
+}
+#reserved-event{
+    padding-top: 0px !important;
+}
+.container-f{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* SECTION 4 */
+
+#t-rules{
+    color: #0056B8;
+    font-size: 3vw;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 20px;
+}
+.row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.row p{
+    color:#003d82;
+}
+.golf-tee {
+    padding: 0 20px;
+}
+#f-section4{
+    justify-content: space-around;
+    margin: 0 10%;
+    align-items: center;
+}
+#f-section4 div{
+    padding: 20px 0;
+}
+.f-golfer{
+    width: 400px;
+    height: auto;
+    margin-top: -70px;
+    margin-bottom: -50px;
+    margin-right: 100px;
+    margin-left: -200px;
+}
+.register2{
+    align-self: center;
+}
+
+
 /* Add media queries for responsiveness - when the screen is between 768-950 px*/
-@media (min-width: 768px) and (max-width: 1050px) {
+@media (min-width: 769px) and (max-width: 1050px) {
     /* Add margin left of logo */
     .logo-wrapper {
         margin-left: 2%;
@@ -283,17 +487,15 @@ p {
         justify-content: center;
         text-align: center;
         align-items: center;
-    }
-    .logo-footer{
-        height: 60px;
-        width: auto;
-    }
-    .logo-wrapper-footer{
         padding: 5px 0;
         background: #0056B8;
         border-top: solid;
         border-width: 3px;
         border-color: white;
+    }
+    .logo-footer{
+        height: 60px;
+        width: auto;
     }
     .footer-wrapper a {
         text-decoration: none;
@@ -306,6 +508,200 @@ p {
     .footer-wrapper p:hover {
         color: #D8C722;
     }
+
+        /* ------------------FUNDRAISER----------------------- */
+
+
+    /* SECTION 1 */
+
+    /* .container-f{
+        padding: 10px 2%;
+    }
+    .fund-row1{
+        display: flex;
+        align-self: flex-start;
+    }
+    #golf-art{
+        width: 70%;
+        height: 70%;
+        margin-left: -50px;
+    } */
+    /* .info1{
+        padding: 10px 20px;
+        margin-left: -40px;
+        display: flex;
+        flex-direction: column;
+    } */
+    /* .info{
+        justify-content: center;
+        text-align: center;
+    }
+    .info p{
+        letter-spacing: 1.5px;
+    }
+    #text1{
+        color: #0056B8;
+        font-size: 1.5em;
+        font-weight: bold;
+    }
+    #presents{
+        margin-top: -50px;
+        margin-bottom: -60px;
+        width: 100%;
+        height: auto;
+        padding-left: 0px;
+        color: #9aced6
+    }
+    #text3 {
+        color: #5c5c5c;
+        font-size: 1.3em;
+        padding-bottom: 5px;
+    }
+    hr.line{
+        border-top: 2px solid #5c5c5c;
+        margin: 0 30px;
+    }
+    #text4 {
+        color: #5c5c5c;
+        font-size: 1.3em;
+        padding-top: 10px;
+        line-height: 1;
+    }
+    #text5 {
+        color: #5c5c5c;
+        font-size: 1em;
+        padding-top: 15px;
+        line-height: 1.5;
+        text-transform:uppercase;
+    }
+    #register{
+        justify-content: center;
+        text-align: center;
+        margin: 10px 0;
+    }
+    #text6{
+        text-transform:uppercase;
+        font-size: 0.7em;
+        margin-top: -50px;
+    }
+    .button{
+        padding-top: 7px;
+    } */
+
+    /* SECTION 2 */
+
+    /* .info2{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .paint{
+        width: 50%;
+        height: auto;
+    } */
+
+    /* SECTION 3 */
+
+    /* .image{
+        width:100%;
+        height: auto;
+        background-position: center;
+        background-size: cover;
+        background-image: url("images/tg-image.jpg");
+    }
+    .image-overlay{
+        width:100%;
+        height: auto;
+        background-color: rgba(21, 69, 124, 0.5);
+    }
+    .section3{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    h3{
+        color: white;
+        font-size: 2em;
+        font-weight: bold;
+    }
+    #included{
+        justify-content: center;
+        text-align: center;
+    }
+    #event-info{
+        width: 100%;
+    }
+    #event-info div{
+        width: 20%;
+        align-self: flex-start;
+        margin: 0 15px;
+    }
+    .event-box {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+    .event-box h4{
+        color: white;
+        font-size: 1.2em;
+        font-weight: bold;
+        padding-bottom: 10px;
+        align-self: center;
+    }
+    .event-box p{
+        color: white;
+        font-size: 0.8em;
+        line-height: 1.3em;
+        padding-bottom: 10px;
+        text-align: center;
+    }
+    .container-f{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    } */
+
+    /* SECTION 4 */
+
+    /* #t-rules{
+        color: #0056B8;
+        font-size: 2em;
+        font-weight: bold;
+        text-align: center;
+        padding-top: 3%;
+    }
+    .row{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 100%;
+    }
+    .row p{
+        color:#003d82;
+    }
+    .golf-tee {
+        width: 20%;
+        height: auto;
+        padding: 0 5%;
+    }
+    #f-section4{
+        justify-content: space-around;
+        margin: 0;
+        align-items: center;
+    }
+    #f-section4 div{
+        padding: 5% 0;
+    }
+    .f-golfer{
+        width: 50%;
+        height: auto;
+        margin-top: -15%;
+        margin-bottom: -15%;
+        margin-right: 0%;
+        margin-left: -10%;
+    }
+    .register2{
+        align-self: center;
+    } */
 }
 
 
@@ -413,17 +809,15 @@ p {
         justify-content: center;
         text-align: center;
         align-items: center;
+        padding: 5px 0;
+        background-color: #0056B8;
+        border-top: solid;
+        border-width: 3px;
+        border-color: white;
     }
     .logo-footer{
         height: 60px;
         width: auto;
-    }
-    .logo-wrapper-footer{
-        padding: 5px 0;
-        background: #0056B8;
-        border-top: solid;
-        border-width: 3px;
-        border-color: white;
     }
     .footer-wrapper a {
         text-decoration: none;
@@ -435,5 +829,196 @@ p {
     }
     .footer-wrapper p:hover {
         color: #D8C722;
+    }
+
+    /* ------------------FUNDRAISER----------------------- */
+
+
+    /* SECTION 1 */
+
+    .container-f{
+        padding: 10px 2%;
+    }
+    .fund-row1{
+        display: flex;
+        align-self: flex-start;
+    }
+    #golf-art{
+        width: 70%;
+        height: 70%;
+        margin-left: -70px;
+        align-self: center;
+    }
+    /* .info1{
+        padding: 0 20px;
+        margin-left: -40px;
+        display: flex;
+        flex-direction: column;
+    } */
+    .info{
+        justify-content: center;
+        text-align: center;
+    }
+    .info p{
+        letter-spacing: 1.5px;
+    }
+    #text1{
+        color: #0056B8;
+        font-size: 20px;
+        font-weight: bold;
+    }
+    #presents{
+        margin-top: -20%;
+        margin-bottom: -25%;
+        margin-left: -10%;
+        width: 80%;
+        height: auto;
+        color: #9aced6
+    }
+    #text3 {
+        color: #5c5c5c;
+        font-size: 20px;
+        padding-bottom: 1%;
+    }
+    hr.line{
+        border-top: 1px solid #5c5c5c;
+        margin: 0 30px;
+    }
+    #text4 {
+        color: #5c5c5c;
+        font-size: 20px;
+        padding-top: 3%;
+        line-height: 1;
+    }
+    #text5 {
+        color: #5c5c5c;
+        font-size: 3vw;
+        padding-top: 5px;
+    }
+    #register{
+        justify-content: center;
+        text-align: center;
+        padding: 10px 15px;
+        padding-top: 7px !important;
+        margin: 15px 10px !important;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        -webkit-transition-duration: 0.3s;
+        transition-duration: 0.3s;
+        -webkit-transition-property: box-shadow, transform;
+        transition-property: box-shadow, transform;
+    }
+    #register:hover, #register:focus, #register:active{
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+    #text6{
+        font-family: "Raleway", sans-serif;
+        text-transform:uppercase;
+        font-size: 12px;
+    }
+
+    /* SECTION 2 */
+
+    .section2 {
+        padding: 20px 0;
+    }
+    .info2{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .paint{
+        width: 50%;
+        height: auto;
+    }
+
+    /* SECTION 3 */
+
+    .image{
+        width: 100%;
+        height: auto;
+        background-position: center;
+        background-size: cover;
+        background-image: url("images/tg-image.jpg");
+    }
+    .image-overlay{
+        width: 100%;
+        height: auto;
+        background-color: rgba(21, 69, 124, 0.5);
+    }
+    .section3{
+        display: flex;
+        flex-direction: column;
+    }
+    h3{
+        color: white;
+        font-size: 32px;
+        font-weight: bold;
+    }
+    #included{
+        justify-content: center;
+        text-align: center;
+    }
+    #f-section3{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    #f-section .div {
+        justify-content: center;
+    }
+    .sub-title{
+        color: white;
+        font-size: 28px !important;
+        font-weight: bold;
+        padding-bottom: 5px;
+    }
+    .sub-text3{
+        color: white !important;
+        font-size: 16px !important;
+        text-align: center;
+    }
+
+    /* SECTION 4 */
+
+    #t-rules{
+        color: #0056B8;
+        font-size: 32px;
+        font-weight: bold;
+        text-align: center;
+    }
+    .row{
+        display: flex;
+        flex-direction: column;
+        align-content: left;
+        width: 100%;
+    }
+    .golf-tee {
+        width: 20%;
+        height: auto;
+    }
+    .sub-text4{
+        font-size: 16px;
+        color:#003d82;
+        text-align: justify !important;
+    }
+    #f-section4{
+        justify-content: space-evenly;
+        align-items: center;
+        width: 80%;
+    }
+    #f-section4 div{
+        padding: 5% 0;
+    }
+    .f-golfer{
+        width: 50%;
+        height: auto;
+        margin-top: -15%;
+        margin-bottom: -15%;
+        margin-right: -10%;
+        margin-left: -20%;
+    }
+    .register2{
+        align-self: center;
     }
 }
