--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body{
     background-size: cover;
     background-position: center;
     border-bottom: solid;
-    border-width: 5px;
-    border-color: white;
+    border-width: 3px;
+    border-color: black;
 }
 .container{
     padding: 10px 2%;
@@ -165,8 +165,8 @@ p {
     padding: 5px 0;
     background: #0056B8;
     border-top: solid;
-    border-width: 3px;
-    border-color: white;
+    border-width:2px;
+    border-color: black;
 }
 .logo-footer{
     height: 60px;
@@ -300,8 +300,8 @@ hr.line{
     flex-direction: column;
     justify-content: space-evenly;
     margin: 0 5%;
-    padding-top: 10px;
-    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 30px;
 }
 #included{
     padding: 20px 0;
@@ -963,15 +963,21 @@ h3{
         display: flex;
         flex-direction: column;
         justify-content: center;
+        margin: 0;
     }
-    #f-section .div {
-        justify-content: center;
+    #f-section3 div {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 100%;
+        margin-left: 0px !important;
+        padding: 10px 0;
     }
     .sub-title{
         color: white;
-        font-size: 28px !important;
+        font-size: 24px !important;
         font-weight: bold;
-        padding-bottom: 5px;
+        padding-bottom: 0px !important;
     }
     .sub-text3{
         color: white !important;
