--- a/style.css
+++ b/style.css
@@ -419,6 +419,7 @@ h3{
     padding-bottom: 10px;
     text-transform: uppercase;
     color:black;
+    font-weight: 900;
 }
 #outer p{
     font-family: "Raleway", sans-serif;
@@ -440,6 +441,7 @@ h3{
     color: black;
     text-align: center;
     padding: 10px 0;
+    font-weight: 900;
 }
 #inner p{
     padding-bottom: 10px;
@@ -522,6 +524,7 @@ h3{
     color: black;
     font-size: 28px;
     padding-top: 5px;
+    font-weight: 900;
 }
 #profile-col h4{
     font-size: 28px;
@@ -1201,27 +1204,36 @@ h3{
     .register2{
         align-self: center;
     }
+
     /* ------------------REGISTRATION----------------------- */
 
     .registration{
-        background-color: rgba(0,86,184,0.2);
+        background-image: url(https://ncg-live-assets.ams3.cdn.digitaloceanspaces.com/uploads/2018/06/Topgolf-Orlando-01-HIghRes281229copy.jpg);
+        -webkit-background-size:cover;
+        background-size: cover;
+        background-position: center center;
+        /* padding: 40px 0; */
     }
-
+    .reg-wrapper{
+        background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5), rgba(0,0,0,0.5));
+        padding: 40px 0;
+    }
     #outer{
         padding: 0 40px;
-        margin: 40px;
+        margin: 0 10%;
         border: solid;
         border-radius: 10px;
         border-color: black;
-        background-color: rgba(0,86,184,0.2);
+        background-color: rgba(255, 255, 255, 0.7);
         text-align: center;
     }
     #outer h1{
         text-align: center;
-        padding: 10px 0;
+        padding-top: 20px;
+        padding-bottom: 10px;
         text-transform: uppercase;
         color:black;
-        font-size: 28px;
+        font-weight: 900;
     }
     #outer p{
         font-family: "Raleway", sans-serif;
@@ -1236,13 +1248,14 @@ h3{
         border: solid;
         border-radius: 10px;
         border-color: black;
-        background-color: rgba(0,86,184,0.2);
+        background-color: rgba(255, 255, 255, 0.4);
     }
     #inner h3{
-        font-size: 26px;
+        font-size: 30px;
         color: black;
         text-align: center;
         padding: 10px 0;
+        font-weight: 900;
     }
     #inner p{
         padding-bottom: 10px;
@@ -1251,27 +1264,121 @@ h3{
         padding: 0 0px;
         padding-bottom: 20px !important;
         font-size: 18px;
-        list-style-position: outside;
-        display: inline-block;
-        padding: 0px 0;
-        padding-left: 15px !important;
-        text-align: left;
+        list-style-position: inside;
+        padding-left: 0;
     }
     #inner li{
         padding-top: 5px;
-        margin-left: 0px;
-        padding: 5px;
+        margin-left: 10px;
     }
     #payment{
         text-transform: uppercase;
         margin-top: 0px !important;
         margin-bottom: 30px !important;
-        background-color: rgba(0,86,184,0.2);
+        background-color: rgba(255, 255, 255, 0.4);
         border: solid;
         border-color: black;
         border-width: 3px;
     }
     #payment_text{
         color: black;
+    }
+
+
+    /* ------------------CONTACT----------------------- */
+
+
+    #contact{
+        background-image: url(https://wallpapercave.com/wp/wp2691568.jpg);
+        -webkit-background-size:cover;
+        background-size: cover;
+        text-align: center;
+        background-position: center;
+    }
+    #body{
+        min-height: 100vh;
+        align-items: center;
+        justify-content: center;
+
+    }
+    #c1{
+        text-align: center;
+        justify-content: center;
+    }
+    #contact-wrapper{
+        background-color: rgb(255,255,255,0.8);
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 1);
+        width: 85%;
+        margin: 50px auto;
+    }
+    #questions{
+        text-transform: uppercase;
+        font-size: 50px;
+        font-weight: 900;
+    }
+    #contacth2{
+        font-size: 30px;
+        font-weight: 900;
+        padding-bottom: 10px;
+        text-transform: uppercase;
+    }
+    #contact-row{
+        justify-content: space-around;
+
+    }
+    .contact-line{
+        height: 5px;
+        border-style: solid;
+        background-color: black;
+        border-radius: 10px;
+        width: 75%;
+        margin: auto;
+    }
+    #profile-col h3{
+        font-weight: 900;
+        color: black;
+        font-size: 28px;
+        padding-top: 5px;
+    }
+    #profile-col h4{
+        font-size: 28px;
+        font-weight: 900;
+        color: #003d82;
+    }
+    #profile-col p{
+        color: black;
+        text-align: center;
+    }
+    .contact-line-bottom{
+        height: 5px;
+        border-style: solid;
+        background-color: black;
+        border-radius: 10px;
+        margin-top: 10px !important;
+        width: 75%;
+        margin: auto;
+    }
+    #contact-row img {
+        display: inline-block;
+
+        margin: 20px;
+        width: 125px;
+        height: 125px;
+
+        /* these values get added to your 100px by default */
+        border: 5px solid #003d82;
+        padding: 20px;
+    }
+    .headshot{
+        /* width: 300px;
+        height: auto; */
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
+        /* margin-top: 10px; */
+        padding: 0px;
+        border-radius: 70px;
+        
+        /* now width and height determine how big your
+            element is as a whole */
+        box-sizing: border-box;
     }
 }
